--- a/mapflow/static/ui/login_dialog.ui
+++ b/mapflow/static/ui/login_dialog.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>350</width>
+    <width>330</width>
     <height>210</height>
    </rect>
   </property>
@@ -18,13 +18,13 @@
   </property>
   <property name="minimumSize">
    <size>
-    <width>350</width>
+    <width>330</width>
     <height>210</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>350</width>
+    <width>330</width>
     <height>210</height>
    </size>
   </property>
@@ -38,8 +38,8 @@
   <property name="styleSheet">
    <string notr="true">rgb(255,0,0)</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0">
+  <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0,1,0">
+   <item>
        <layout class="QFormLayout" name="formLayout">
         <item row="0" column="0">
          <widget class="QLabel" name="loginLabel">
@@ -74,7 +74,7 @@
         </item>
     </layout>
    </item>
-   <item row="1" column="0">
+   <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QCheckBox" name="rememberMe">
@@ -98,8 +98,32 @@
         </item>
        </layout>
       </item>
-   <item row="2" column="0">
+   <item>
+    <layout class="QHBoxLayout" name="layoutInvalidCredentials">
+     <item>
+      <spacer name="spacerInvalidCredentials">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeType">
+        <enum>QSizePolicy::Minimum</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>13</width>
+         <height>29</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
          <widget class="QLabel" name="invalidCredentialsMessage">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
           <property name="visible">
            <bool>false</bool>
           </property>
@@ -120,10 +144,12 @@
           </property>
          </widget>
         </item>
-   <item row="3" column="0">
-     <layout class="QHBoxLayout" name="layoutButtons">
+    </layout>
+   </item>
       <item>
-       <spacer name="horizontalSpacer">
+    <layout class="QHBoxLayout" name="layoutButtons" stretch="1,0,0">
+     <item>
+      <spacer name="spacerButtons">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
@@ -136,17 +162,6 @@
        </spacer>
       </item>
       <item>
-       <layout class="QHBoxLayout" name="buttons" stretch="0,0">
-        <property name="spacing">
-         <number>10</number>
-        </property>
-        <property name="sizeConstraint">
-         <enum>QLayout::SetFixedSize</enum>
-        </property>
-        <property name="rightMargin">
-         <number>0</number>
-        </property>
-        <item>
          <widget class="QPushButton" name="cancelButton">
           <property name="text">
            <string>Cancel</string>
@@ -166,8 +181,6 @@
        </layout>
       </item>
      </layout>
-    </item>
-   </layout>
  </widget>
  <customwidgets>
   <customwidget>
