improv: add invalid credentials label dynamically

--- a/mapflow/static/ui/login_dialog.ui
+++ b/mapflow/static/ui/login_dialog.ui
@@ -6,26 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>330</width>
-    <height>210</height>
+    <width>300</width>
+    <height>200</height>
    </rect>
-  </property>
-  <property name="sizePolicy">
-   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-    <horstretch>0</horstretch>
-    <verstretch>0</verstretch>
-   </sizepolicy>
   </property>
   <property name="minimumSize">
    <size>
-    <width>330</width>
-    <height>210</height>
+    <width>300</width>
+    <height>180</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>330</width>
-    <height>210</height>
+    <width>350</width>
+    <height>230</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -38,7 +32,7 @@
   <property name="styleSheet">
    <string notr="true">rgb(255,0,0)</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0,1,0">
+  <layout class="QVBoxLayout" name="verticalLayout">
    <item>
        <layout class="QFormLayout" name="formLayout">
         <item row="0" column="0">
@@ -49,7 +43,7 @@
          </widget>
         </item>
         <item row="0" column="1">
-         <widget class="QLineEdit" name="loginField">
+      <widget class="QLineEdit" name="username">
           <property name="text">
            <string/>
           </property>
@@ -59,14 +53,14 @@
          </widget>
         </item>
         <item row="1" column="0">
-         <widget class="QLabel" name="passwordLabel">
+      <widget class="QLabel" name="labelPassword">
           <property name="text">
            <string>Token</string>
           </property>
          </widget>
         </item>
         <item row="1" column="1">
-         <widget class="QgsPasswordLineEdit" name="passwordField">
+      <widget class="QgsPasswordLineEdit" name="password">
           <property name="clearButtonEnabled">
            <bool>true</bool>
           </property>
@@ -75,79 +69,26 @@
     </layout>
    </item>
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout">
-     <item>
-      <widget class="QCheckBox" name="rememberMe">
-          <property name="text">
-        <string>Remember me</string>
-          </property>
-         </widget>
-        </item>
-          <item>
       <widget class="QLabel" name="needAnAccount">
            <property name="text">
         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;a href=&quot;https://mapflow.ai&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0057ae;&quot;&gt;Need an account?&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
            </property>
-       <property name="wordWrap">
-        <bool>true</bool>
+     <property name="textFormat">
+      <enum>Qt::RichText</enum>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
        </property>
        <property name="openExternalLinks">
         <bool>true</bool>
           </property>
          </widget>
         </item>
-       </layout>
-      </item>
    <item>
-    <layout class="QHBoxLayout" name="layoutInvalidCredentials">
-     <item>
-      <spacer name="spacerInvalidCredentials">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeType">
-        <enum>QSizePolicy::Minimum</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>13</width>
-         <height>29</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item>
-         <widget class="QLabel" name="invalidCredentialsMessage">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-          <property name="visible">
-           <bool>false</bool>
-          </property>
-          <property name="styleSheet">
-           <string notr="true">color: rgb(239, 41, 41);</string>
-          </property>
-          <property name="frameShape">
-           <enum>QFrame::NoFrame</enum>
-          </property>
-          <property name="frameShadow">
-           <enum>QFrame::Plain</enum>
-          </property>
-          <property name="text">
-           <string>Invalid credentials</string>
-          </property>
-          <property name="alignment">
-           <set>Qt::AlignCenter</set>
-          </property>
-         </widget>
-        </item>
-    </layout>
-   </item>
-      <item>
     <layout class="QHBoxLayout" name="layoutButtons" stretch="1,0,0">
+     <property name="topMargin">
+      <number>15</number>
+          </property>
      <item>
       <spacer name="spacerButtons">
         <property name="orientation">
@@ -162,14 +103,14 @@
        </spacer>
       </item>
       <item>
-         <widget class="QPushButton" name="cancelButton">
+      <widget class="QPushButton" name="cancel">
           <property name="text">
            <string>Cancel</string>
           </property>
          </widget>
         </item>
         <item>
-         <widget class="QPushButton" name="loginButton">
+      <widget class="QPushButton" name="logIn">
           <property name="text">
            <string>Log in</string>
           </property>
@@ -192,7 +133,7 @@
  <resources/>
  <connections>
   <connection>
-   <sender>cancelButton</sender>
+   <sender>cancel</sender>
    <signal>clicked()</signal>
    <receiver>LoginDialog</receiver>
    <slot>reject()</slot>
@@ -208,7 +149,7 @@
    </hints>
   </connection>
   <connection>
-   <sender>loginButton</sender>
+   <sender>logIn</sender>
    <signal>clicked()</signal>
    <receiver>LoginDialog</receiver>
    <slot>accept()</slot>
