--- a/mapflow/static/ui/main_dialog.ui
+++ b/mapflow/static/ui/main_dialog.ui
@@ -530,14 +530,14 @@
           <item row="0" column="0">
            <layout class="QFormLayout" name="customProviderAuth">
             <item row="0" column="0">
-             <widget class="QLabel" name="labelCustomProviderLogin">
+             <widget class="QLabel" name="labelcustomProviderUsername">
               <property name="text">
                <string>Login:</string>
               </property>
              </widget>
             </item>
             <item row="0" column="1">
-             <widget class="QLineEdit" name="customProviderLogin">
+             <widget class="QLineEdit" name="customProviderUsername">
               <property name="text">
                <string/>
               </property>
