--- a/mapflow/static/ui/provider_dialog.ui
+++ b/mapflow/static/ui/provider_dialog.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>CustomProviderDialog</class>
- <widget class="QDialog" name="CustomProviderDialog">
+ <class>ProviderDialog</class>
+ <widget class="QDialog" name="ProviderDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -116,24 +116,8 @@
  <connections>
   <connection>
    <sender>buttonBox</sender>
-   <signal>accepted()</signal>
-   <receiver>CustomProviderDialog</receiver>
-   <slot>accept()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>248</x>
-     <y>254</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>157</x>
-     <y>274</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>buttonBox</sender>
    <signal>rejected()</signal>
-   <receiver>CustomProviderDialog</receiver>
+   <receiver>ProviderDialog</receiver>
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
