--- a/mapflow/static/ui/provider_dialog.ui
+++ b/mapflow/static/ui/provider_dialog.ui
@@ -2,6 +2,9 @@
 <ui version="4.0">
  <class>ProviderDialog</class>
  <widget class="QDialog" name="ProviderDialog">
+  <property name="windowModality">
+   <enum>Qt::WindowModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -29,10 +32,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Custom provider</string>
-  </property>
-  <property name="modal">
-   <bool>true</bool>
+   <string>Provider</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
@@ -127,6 +127,22 @@
     <hint type="destinationlabel">
      <x>286</x>
      <y>274</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>buttonBox</sender>
+   <signal>accepted()</signal>
+   <receiver>ProviderDialog</receiver>
+   <slot>accept()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>162</x>
+     <y>149</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>162</x>
+     <y>87</y>
     </hint>
    </hints>
   </connection>
